changed some tools and added dark-light

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,9 +58,6 @@ dependencies {
     // material design
     implementation 'com.google.android.material:material:1.8.0'
 
-    // glide
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
-
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
@@ -86,5 +83,9 @@ dependencies {
     // sticky nested scroll view
     implementation 'com.github.didikk:sticky-nestedscrollview:1.0.1'
 
-    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.0-beta01'
+    // facebook shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    // swipe refresh layout
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
